[package]
name = "kube2compose"
version = "1.0.0"
authors = ["Mikail Bagishov <bagishov.mikail@yandex.ru>"]
edition = "2018"

[dependencies]
k8s-openapi = { version = "0.9.0", features = ["v1_16"] }
yaml-rust = "0.4.4"
clap = "3.0.0-beta.1"
ignore = "0.4.16"
anyhow = "1.0.32"
serde = { version = "1.0.114", features = ["derive"] }
serde_yaml = "0.8.13"
linked-hash-map = { version = "0.5.3", features = ["serde_impl"] }
